deployments/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: elasticsearch
  name: elasticsearch
spec:
  replicas: 3
  selector:
    matchLabels:
      type: elastic-db
  template:
    metadata:
      labels:
        type: elastic-db
    spec:
      containers:
        - image: quay.io/pires/docker-elasticsearch-kubernetes:6.4.2
          name: elastic-db
          ports:
            - containerPort: 9200
          resources: {}
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: elasticsearch
  name: elasticsearch
spec:
  ports:
    - name: "9200"
      port: 9200
      targetPort: 9200
  selector:
    name: elasticsearch
status:
  loadBalancer: {}
